Changed fira code css location

--- a/resources/views/welcome.njk
+++ b/resources/views/welcome.njk
@@ -4,7 +4,7 @@
 
 {% scss 'welcome' %}
 {% scss 'code' %}
-{% style 'https://raw.githubusercontent.com/tonsky/FiraCode/master/distr/fira_code.css' %}
+{% style 'https://s3.amazonaws.com/assets.grind.rocks/docs/css/fira_code.css' %}
 
 {% block content %}
 	<div class="welcome">
