--- a/resources/views/layout/master.njk
+++ b/resources/views/layout/master.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{% block title %}Grind{% endblock %}</title>
+		<title>{% block title %}Grind | Web Framework for Node.js{% endblock %}</title>
 
 		{{ html.style('https://fonts.googleapis.com/css?family=Source+Sans+Pro') }}
 		{% asset 'render', 'styles' %}
