--- a/resources/views/welcome.njk
+++ b/resources/views/welcome.njk
@@ -13,5 +13,10 @@
 		<div class="welcome-code">
 			{% include 'welcome/code.njk' %}
 		</div>
+
+		<div class="welcome-buttons">
+			<a href="http://grind.readme.io" class="welcome-button welcome-button-docs">View Documentation →</a>
+			<a href="http://github.com/grindjs" class="welcome-button welcome-button-github">Explore the Code →</a>
+		</div>
 	</div>
 {% endblock %}
