--- a/resources/views/layout/app.njk
+++ b/resources/views/layout/app.njk
@@ -8,8 +8,8 @@
 			{{ html.linkRoute('welcome.show', 'Grind', null, { class: 'header-logo' }) }}
 
 			<nav class="header-links">
-				<a href="http://github.com/grindjs" class="header-link">GitHub</a>
-				<a href="http://grind.readme.io" class="header-link">Docs</a>
+				<a href="https://github.com/grindjs" class="header-link">GitHub</a>
+				<a href="https://grind.readme.io/docs" class="header-link">Docs</a>
 			</nav>
 		</div>
 	</header>
@@ -18,7 +18,7 @@
 {% block contentAfter %}
 	<footer class="footer">
 		<div class="container footer-container">
-			<span class="footer-text">Grind was created by <a href="http://github.com/shnhrrsn">Shaun Harrison</a> and is made available under the MIT license.</span>
+			<span class="footer-text">Grind was created by <a href="https://github.com/shnhrrsn">Shaun Harrison</a> and is made available under the MIT license.</span>
 		</div>
 	</footer>
 {% endblock %}
