--- a/resources/views/welcome.njk
+++ b/resources/views/welcome.njk
@@ -15,8 +15,8 @@
 		</div>
 
 		<div class="welcome-buttons">
-			<a href="http://grind.readme.io" class="welcome-button welcome-button-docs">View Documentation →</a>
-			<a href="http://github.com/grindjs" class="welcome-button welcome-button-github">Explore the Code →</a>
+			<a href="https://grind.readme.io/docs" class="welcome-button welcome-button-docs">View Documentation →</a>
+			<a href="https://github.com/grindjs" class="welcome-button welcome-button-github">Explore the Code →</a>
 		</div>
 	</div>
 {% endblock %}
