--- a/resources/assets/scss/welcome.scss
+++ b/resources/assets/scss/welcome.scss
@@ -5,60 +5,128 @@
 	font-size: 0;
 }
 
-	.welcome-header {
-		margin: 0 0 10px;
-	}
-
-	.welcome-lead {
-		margin: 0;
-	}
-
 	.welcome-body {
-		display: inline-block;
-		width: 50%;
-		padding-right: 30px;
-		vertical-align: middle;
-	}
-
-	.welcome-code {
-		display: inline-block;
-		width: 50%;
-		font-size: 18px;
-		vertical-align: middle;
-	}
-
-	.welcome-buttons {
-		margin-top: 100px;
+		display: block;
+		width: 500px;
+		margin: 0 auto;
 		text-align: center;
 	}
 
-	.welcome-button {
-		$button-height: 60px;
+		.welcome-header {
+			margin: 0 0 10px;
 
-		display: inline-block;
-		height: $button-height;
-		padding: 0 24px;
+			font-size: 50px;
+			font-weight: $font-weight-bold;
+			letter-spacing: 0;
+			color: #1d1c1f;
+		}
 
-		font-size: 20px;
-		font-weight: 300;
-		line-height: $button-height;
+		.welcome-lead {
+			margin: 0;
+
+			font-size: 15px;
+			line-height: 26px;
+			color: #8f8e98;
+		}
+
+	.welcome-code {
+		display: block;
+		width: 420px;
+		margin: 60px auto 0;
+
+		font-size: 15px;
+
+		border-radius: 6px 6px 4px 4px;
+		box-shadow: 0 0 2px 0 rgba(#000, 0.12), 0 0 0 1px rgba(#000, 0.03), 0 7px 26px 0 rgba(#000, 0.1), 0 10px 14px 0 rgba(#000, 0.3);
+
+		.code {
+			position: relative;
+			z-index: 0;
+			padding: 30px;
+
+			border: 0;
+			border-top-right-radius: 0;
+			border-bottom-right-radius: 4px;
+			border-bottom-left-radius: 4px;
+			border-top-left-radius: 0;
+		}
+	}
+
+		.welcome-code-faux-toolbar {
+			position: relative;
+			z-index: 1;
+			display: block;
+			height: 38px;
+			padding-left: 5px;
+
+			line-height: 40px;
+
+			background-image: linear-gradient(-179deg, #e5e5e5 0%, #d8d8d8 100%);
+			border-top-right-radius: 5px;
+			border-top-left-radius: 5px;
+			box-shadow: 0 1px 0 0 rgba(#000, 0.10), 0 1px 1px 0 rgba(#000, 0.20);
+		}
+
+			.welcome-code-faux-toolbar-button {
+				display: inline-block;
+				width: 12px;
+				height: 12px;
+				margin-left: 8px;
+
+				vertical-align: middle;
+
+				background: #ff6058;
+				border-radius: 50%;
+				box-shadow: inset 0 0 0 1px rgba(#000, 0.10);
+
+				& + & {
+					background: #ffc02f;
+				}
+
+				& + & + & {
+					background: #28ca41;
+				}
+			}
+
+	.welcome-buttons {
+		margin-top: 30px;
+	}
+
+		.welcome-button {
+			& + & {
+				margin-left: 20px;
+			}
+		}
+
+.welcome-features {
+	padding: 100px 0;
+	margin-top: -5px;
+	background: transparent url(../img/alternate-background.svg) no-repeat center top;
+}
+
+	.welcome-features-row {
+		& + & {
+			margin-top: 60px;
+		}
+	}
+
+	.welcome-feature-icon {
+		display: block;
+	}
+
+	.welcome-feature-header {
+		margin: 30px 0 12px;
+
+		font-size: 17px;
+		font-weight: $font-weight-medium;
+		line-height: 26px;
 		color: #fff;
-		text-decoration: none;
+	}
 
-		background: $accent-color;
-		border-radius: 10px;
-		transition: background $transition-timing;
+	.welcome-feature-description {
+		padding-right: 10px;
 
-		+ .welcome-button {
-			margin-left: 20px;
-		}
-
-		&:hover {
-			color: #fff;
-			background: darken($accent-color, 5%);
-		}
-
-		&:active {
-			background: darken($accent-color, 10%);
-		}
+		font-size: 13px;
+		line-height: 23px;
+		color: #7285b1;
 	}
