--- a/resources/assets/scss/docs.scss
+++ b/resources/assets/scss/docs.scss
@@ -33,8 +33,8 @@ $docs-border-color: #e6e7e9;
 			max-width: 100%;
 		}
 
-		p, pre, ul, ol {
-			& + p, & + pre, & + ul, & + ol {
+		p, pre, ul, ol, table {
+			& + p, & + pre, & + ul, & + ol, & + table {
 				margin-top: 20px;
 			}
 		}
