--- a/resources/assets/scss/editor.scss
+++ b/resources/assets/scss/editor.scss
@@ -6,8 +6,8 @@
 	color: #555;
 
 	background: #fff;
-	border: 1px solid #e6e7e9;
-	border-radius: 4px;
+	border-radius: 6px;
+	box-shadow: 0 1px 3px 0 rgba(#000, 0.19);
 
 	::selection {
 		background-color: #e1e6f5;
