--- a/resources/assets/scss/app/_typography.scss
+++ b/resources/assets/scss/app/_typography.scss
@@ -24,14 +24,15 @@ li + li {
 h1 {
 	@extend %header;
 
-	margin-top: 40px;
+	margin-top: 60px;
+	font-size: 20px;
 }
 
 h2 {
 	@extend %header;
 
-	margin-top: 40px;
-	font-size: 20px;
+	margin-top: 50px;
+	font-size: 17px;
 }
 
 h3, h4, h5 {
@@ -41,13 +42,17 @@ h3, h4, h5 {
 	font-size: 15px;
 }
 
-h4, h5 {
+h4 {
 	font-size: 13px;
-	color: #949bad;
 }
 
 h5 {
+	font-size: 12px;
+}
+
+h6 {
 	font-size: 10px;
+	font-weight: $font-weight-bold;
 	text-transform: uppercase;
 }
 
@@ -167,3 +172,12 @@ p, li {
 	.code-string {
 		color: #5d99ff;
 	}
+
+hr {
+	display: block;
+	height: 1px;
+	margin: 60px 0;
+
+	background: #e6e7e9;
+	border: 0;
+}
