--- a/resources/assets/scss/docs.scss
+++ b/resources/assets/scss/docs.scss
@@ -57,16 +57,21 @@ $docs-border-color: #e6e7e9;
 		ul {
 			list-style: none;
 
-			li:before {
-				position: relative;
-				top: 4px;
-				margin-right: 5px;
+			li {
+				padding-left: 20px;
 
-				font-size: 23px;
-				font-weight: $font-weight-bold;
-				line-height: inherit;
-				color: #555;
-				content: '•';
+				&:before {
+					display: inline-block;
+					width: 5px;
+					height: 8px;
+					margin-right: 15px;
+					margin-left: -20px;
+
+					vertical-align: middle;
+
+					background: transparent url(../img/ul-icon.svg) no-repeat center center;
+					content: '';
+				}
 			}
 		}
 
