Fixed text rendering

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -1,6 +1,10 @@
 @import 'common';
 
-* { box-sizing: border-box; }
+* {
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizeLegibility;
+	box-sizing: border-box;
+}
 
 html, body {
 	background: $body-background-color;
