--- a/resources/assets/scss/welcome.scss
+++ b/resources/assets/scss/welcome.scss
@@ -39,16 +39,19 @@
 		border-radius: 6px 6px 4px 4px;
 		box-shadow: 0 0 2px 0 rgba(#000, 0.12), 0 0 0 1px rgba(#000, 0.03), 0 7px 26px 0 rgba(#000, 0.1), 0 10px 14px 0 rgba(#000, 0.3);
 
-		.code {
+		.editor {
 			position: relative;
 			z-index: 0;
+
+			display: block;
 			padding: 30px;
 
+			line-height: 21px;
+
+			background: #fff;
 			border: 0;
-			border-top-right-radius: 0;
-			border-bottom-right-radius: 4px;
-			border-bottom-left-radius: 4px;
-			border-top-left-radius: 0;
+			border-radius: 0 0 4px 4px;
+			box-shadow: none;
 		}
 	}
 
