--- a/resources/views/welcome/show.njk
+++ b/resources/views/welcome/show.njk
@@ -9,8 +9,8 @@
 			<p class="welcome-lead">Grind is an opinionated Node web framework that brings together popular packages in an easy to use framework to provide a solid foundation for you to build your apps on, without reinventing the wheel.</p>
 
 			<div class="welcome-buttons">
-				<a href="{{ url.route('docs.show') }}" class="btn btn-info welcome-button">View Documentation →</a>
-				<a href="https://github.com/grindjs" class="btn welcome-button">Explore the Code →</a>
+				<a href="{{ url.route('docs.show') }}" class="btn btn-info welcome-button">View Documentation<span class="btn-icon btn-icon-chevron-right"></span></a>
+				<a href="https://github.com/grindjs" class="btn welcome-button">Explore the Code<span class="btn-icon btn-icon-chevron-right"></span></a>
 			</div>
 		</div>
 		<div class="welcome-code">
