Minor copy tweaks

--- a/resources/views/welcome/show.njk
+++ b/resources/views/welcome/show.njk
@@ -6,7 +6,7 @@
 	<div class="welcome">
 		<div class="welcome-body">
 			<h1 class="welcome-header">Say Hello to Grind</h1>
-			<p class="welcome-lead">Grind is an opinionated Node web framework that brings together popular packages in an easy to use framework to provide a solid foundation for you to build your apps on, without reinventing the wheel.</p>
+			<p class="welcome-lead">Grind is an opinionated Node web framework that utilizes popular packages in an easy to use framework to provide a solid foundation for you to build your apps on, without reinventing the wheel.</p>
 
 			<div class="welcome-buttons">
 				<a href="{{ url.route('docs.show') }}" class="btn btn-info welcome-button">View Documentation<span class="btn-icon btn-icon-chevron-right"></span></a>
@@ -46,12 +46,12 @@
 				<div class="col-xs-4">
 					<span class="welcome-feature-icon">{{ html.image(assetPath('img/feature-performance.svg')) }}</span>
 					<h2 class="welcome-feature-header">Performance over Everything</h2>
-					<p class="welcome-feature-description">Grind’s built on Express and all routing is compiled to Express routes at runtime so there's no additional latency vs Express.</p>
+					<p class="welcome-feature-description">Grind’s built on Express and all routing is compiled to Express routes at runtime so there's no additional latency.</p>
 				</div>
 				<div class="col-xs-4">
 					<span class="welcome-feature-icon">{{ html.image(assetPath('img/feature-structure.svg')) }}</span>
 					<h2 class="welcome-feature-header">Developer Friendly</h2>
-					<p class="welcome-feature-description">Grind provides a well structured starting point for your apps and numerous developer tools such as in-browser syntax errors and to help you get your job done.</p>
+					<p class="welcome-feature-description">Grind provides a well structured foundation and numerous dev tools (including in-browser syntax errors!) to help you move fast.</p>
 				</div>
 			</div>
 			<div class="row welcome-features-row">
