Added a minimum body width

--- a/resources/views/layout/master.njk
+++ b/resources/views/layout/master.njk
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>{% block title %}Grind | Web Framework for Node.js{% endblock %}</title>
+		<meta name="viewport" content="width=1070" />
 
 		{{ html.style('https://s3.amazonaws.com/assets.grind.rocks/docs/css/BentonSans.css') }}
 		{{ html.style('https://s3.amazonaws.com/assets.grind.rocks/docs/css/fira_code.css') }}
