--- a/resources/assets/scss/docs.scss
+++ b/resources/assets/scss/docs.scss
@@ -15,6 +15,7 @@ $docs-border-color: #e6e7e9;
 
 	.docs-navigation {
 		width: 160px;
+		padding-bottom: 100px;
 		border-right: 2px solid $docs-border-color;
 
 		h5 {
@@ -27,8 +28,12 @@ $docs-border-color: #e6e7e9;
 		li {
 			line-height: 13px;
 
-			+ li {
+			+ li, > ul {
 				margin-top: 10px;
+			}
+
+			ul {
+				padding-left: 4px;
 			}
 		}
 	}
