--- a/resources/views/layout/app.njk
+++ b/resources/views/layout/app.njk
@@ -17,6 +17,7 @@
 				{{ html.linkRoute('docs.show', 'Documentation', null, { class: 'header-link' }) }}
 				<a href="https://github.com/grindjs" class="header-link">GitHub</a>
 				<a href="https://twitter.com/grindjs" class="header-link" target="_blank">Twitter</a>
+				<a href="https://grind.chat/" class="header-link" target="_blank">Slack</a>
 			</nav>
 
 			{{ html.linkRoute('docs.show', 'Get Started', [ 'guides', 'installation' ], { class: 'header-cta btn' }) }}
