Added support for a {nowrap} markdown tag This replaces the previous implementation in tables that would force the last column not to wrap, which was having a bunch of unintended side effects. Now docs can explicitly request nowrap, otherwise tables will behave as normal

--- a/resources/assets/scss/app/_tables.scss
+++ b/resources/assets/scss/app/_tables.scss
@@ -20,13 +20,11 @@ th {
 	@extend %table-cell;
 
 	padding: 16px 20px 13px;
-	white-space: nowrap;
-	border-bottom: 2px solid #d7d9dd;
-	text-align: left;
 
-	&:last-child {
-		width: 100%;
-	}
+	text-align: left;
+	white-space: nowrap;
+
+	border-bottom: 2px solid #d7d9dd;
 }
 
 td {
@@ -35,10 +33,9 @@ td {
 	padding: 8px 20px;
 	text-align: left;
 
-	&:last-child {
-		white-space: nowrap;
-		max-width: 1px;
-		text-overflow: ellipsis;
-		overflow: hidden;
+	&:first-child {
+		code {
+			white-space: nowrap;
+		}
 	}
 }
