--- a/resources/views/layout/app.njk
+++ b/resources/views/layout/app.njk
@@ -37,7 +37,7 @@
 				<nav class="footer-links">
 					<a href="{{ url.route('docs.show') }}" class="footer-link">Documentation</a>
 					<a href="https://github.com/grindjs" class="footer-link">GitHub</a>
-					<a href="https://twitter.com/grindjs" class="footer-link" target="_blank">Twitter</a>
+					<a href="https://grind.chat/" class="footer-link" target="_blank">Slack</a>
 				</nav>
 
 				<span class="footer-text">Grind was created by <a href="https://github.com/shnhrrsn" target="_blank">Shaun Harrison</a> and is made available under the MIT license.</span>
