Added support for multiple versions of docs

--- a/resources/assets/scss/app/_buttons.scss
+++ b/resources/assets/scss/app/_buttons.scss
@@ -85,6 +85,7 @@
 		font-weight: $font-weight-normal;
 		line-height: 36px;
 		color: #1d1c1f;
+		text-align: center;
 		pointer-events: none;
 		cursor: default;
 
