--- a/resources/views/docs/show.njk
+++ b/resources/views/docs/show.njk
@@ -2,12 +2,25 @@
 
 {% scss 'docs' %}
 
+{% block headerActions %}
+	<label class="header-cta btn btn-info">
+		<input type="checkbox" class="btn-actions-trigger" />
+		{{ activeVersion | formatVersion }}<span class="btn-icon btn-icon-chevron-down"></span>
+		<ul class="btn-actions">
+			{% for version in versions %}
+				{% set routeParams = routeParams | set('version', version) %}
+				<li class="btn-action"><a href="{{ url.route('docs.show', routeParams) }}" class="btn-action-link">{{ version | formatVersion }}</a></li>
+			{% endfor %}
+		</ul>
+	</label>
+{% endblock %}
+
 {% block content %}
 	<div class="docs">
 		<aside class="docs-navigation">{{ documentation | safe }}</aside>
 		<section class="docs-content">
 			{{ content | safe }}
-			<a href="https://github.com/grindjs/docs/edit/master{{ path }}.markdown" class="docs-content-edit">Edit</a>
+			<a href="https://github.com/grindjs/docs/edit{{ path }}.markdown" class="docs-content-edit">Edit</a>
 		</section>
 	</div>
 {% endblock %}
