--- a/resources/assets/scss/app/_typography.scss
+++ b/resources/assets/scss/app/_typography.scss
@@ -132,11 +132,12 @@ pre, code {
 	font-family: 'Fira Code', monospace;
 }
 
-p, li {
+p, li, h1, h2, h3, h4 {
 	code {
 		display: inline-block;
 		padding: 0 6px;
 
+		font-weight: normal;
 		font-size: 13px;
 		color: #513cf5;
 
