chore(grind-site): update fonts

--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -12,7 +12,7 @@ $font-weight-normal: normal;
 $font-weight-medium: 500;
 $font-weight-bold: bold;
 
-$font-family-sans-serif: 'BentonSans', sans-serif;
+$font-family-sans-serif: 'Source Sans Pro', sans-serif;
 
 $transition-duration: 0.2s;
 $transition-timing-function: ease-in-out;
